@@ -1668,7 +1668,7 @@ NS_EXTERN SOCKET Ns_SockListenUnix(char *path, int backlog, int mode);
 
 NS_EXTERN SOCKET Ns_SockBindUdp(struct sockaddr_in *saPtr);
 NS_EXTERN SOCKET Ns_SockBindRaw(int proto);
-NS_EXTERN SOCKET Ns_SockBindUnix(char *path, int mode);
+NS_EXTERN SOCKET Ns_SockBindUnix(char *path, int socktype, int mode);
 
 NS_EXTERN void NsForkBinder(void);
 NS_EXTERN void NsStopBinder(void);
